Fix daily low for non-shortable asset combinations, make value stats more visible

--- a/app/css/market.css
+++ b/app/css/market.css
@@ -129,7 +129,7 @@ span.cell {
 
 .market-stats .stat .value {
 	font-size: 12px;
-	color: #888;
+	color: #000;
 	letter-spacing: normal;
 }
 
